Fixing Vertical white space in responsive

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -46,6 +46,11 @@
 html {
     height: 100% !important;
     scroll-behavior: smooth;
+    width: 100% !important;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 
